<resources>
    <string name="app_name">MSM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_main">Main</string>
    <string name="menu_connect_with_us">Connect with us</string>
    <string name="menu_who_are_we">Who are we</string>
    <string name="menu_your_feedback_about_the_app">Your feedback</string>
    <string name="availability_of_gates_text">Availability of gates</string>
    <string name="bill_payment_centers_text">Bill payment centers</string>
    <string name="my_services_text">My service</string>
    <string name="offers_and_advertisements_text">Offers and advertisements</string>
    <string name="register_a_subscription_request_text">Register a subscription request</string>
    <string name="live_support_text">Live support</string>
    <string name="f_tv_Main_Text_text">Your notes about the app</string>
    <string name="f_btn_send">Send</string>
    <string name="cwu_tv_headphone_text">011-8855</string>
    <string name="cwu_tv_phone_text">0967184204</string>
    <string name="cwu_tv_gmail_text">khaled3sawan@gmail.com</string>
    <string name="cwu_tv_facebook_text">https://www.facebook.com/khaledsn192</string>
    <string name="cwu_tv_telegram_text">https://t.me/Al_Hornet</string>
    <string name="cws_Main_text">Connect with us</string>
    <string name="f_Main_text">MSM</string>
    <string name="your_feedback_text">Your feedback</string>
    <string name="aog_btn_check_up_text">Check up</string>
    <string name="aog_tv_mainText_text">قم يوضع رقم الهاتف الأرضي ثم اضغط على تأكيد</string>
    <string name="cp_tv_Logo">تغيير كلمة المرور</string>
    <string name="cp_tv_main_Text_text">يسمح باستخدام المحارف والأرقام الانكليزية فقط في كلمة السر</string>
    <string name="cp_pet_New_Password_layout_hint_text">Enter new password</string>
    <string name="cp_pet_New_Password_layout_helper_text">*مطلوب</string>
    <string name="cp_pet_Confirm_Password_Change_layout_hint_text">Confirm password</string>
    <string name="cp_pet_Confirm_Password_Change_layout_helper_text">*مطلوب</string>
    <string name="cp_btn_Confirm_Password_Change_text">تأكيد</string>
    <string name="bai_tv_Subscription_Status_TextOnly_text">حالة الإشتراك :</string>
    <string name="bai_tv_Subscription_Status_ForEdit_text">فعال</string>
    <string name="bai_tv_Next_Bill_text">عزيزي المشترك سيترتب عليك فاتورة قدرها X سيتم اقتطاعها من فاتورة الشهر القادم</string>
    <string name="bai_tv_Package_Information_text">حجم الباقة الأساسية X غيغا بايت صالحة لغاية XX_XX_XXXX قمت باستهلاك X غيغا بايت \nالمتبقي من الباقة الأساسية X غيغا بايت \nحجم التبادل الظاهر هو Download فقط</string>
    <string name="bai_tv_Charged_Balance_text">الرصيد المشحون : X غيغا بايت</string>
    <string name="bai_tv_Remaining_Balance_text">المتبقي من الرصيد المشحون : X غيغا بايت</string>
    <string name="main_btn_Profile_text">Profile</string>
    <string name="p_tv_Text_text">اسم المستخدم و كلمة المرور الخاصة بالإشتارك الحالي</string>
    <string name="main_btn_balance_and_invoice_text">Balance and invoice</string>
    <string name="main_btn_Change_Speed_text">Change speed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="be_one">Be a partner in developing the application and provide us with any comments, opinions or ideas related to it.</string>
    <string name="please">Please write your comments here:</string>
    <string name="your_notes">Your note</string>
    <string name="h_activate">Activate the application</string>
    <string name="enter_to_search">Enter the landline phone number, then press Confirm</string>
    <string name="activate">Activate</string>
    <string name="confirm">confirm</string>
    <string name="availability_adsl">Availability ADSL</string>
    <string name="send">Send</string>
    <string name="services">services</string>
    <string name="avilibilty_adsl">Avilibilty Adsl</string>
    <string name="Bill_Payment_Centers">Bill Payment Centers</string>
    <string name="Offers_and_advertisements">Offers and advertisements</string>
    <string name="Register_a_subscription_request">Subscription request</string>
    <string name="Live_Support">Live Support</string>
    <string name="menu_connect">Connect with us</string>
    <string name="menu_we">Who we are</string>
    <string name="menu_notes">Your notes about the app</string>
    <string name="menu_Customer_Home">Customer</string>
    <string name="main_btn_Change_Password_text">Change password</string>
    <string name="center_Main_btn_add_customer_text">Add new customer</string>
    <string name="center_Main_btn_edit_customer_account_text">Edite customer account</string>
    <string name="center_Main_btn_add_service_text">Customer services</string>
    <string name="center_Main_btn_send_request_to_admin_text">Send request to admin</string>
    <string name="center_Main_btn_add_offer_text">Add offer</string>
    <string name="menu_Center_Home">Center</string>


    <string name="approval_requests">Approval requests</string>
    <string name="reports">Reports</string>
    <string name="offers_and_ads">Offers and Ads</string>
    <string name="revenues">Revenues</string>
    <string name="bills">Bills</string>
    <string name="add_offer">Add offer</string>
    <string name="manager">Manager</string>
    <string name="title">title</string>
    <string name="ad_text_and_presentation">ad_text_and_presentation</string>
    <string name="offers" />
    <string name="add_new_item">Add new item</string>
    <string name="title_of_offer">Title of offer</string>
    <string name="offer">offer</string>
    <string name="add_new_offer">add new offer</string>

    <string name="number_of_customer">number of customer:</string>
    <string name="monthly_revenue">monthly revenue:</string>
    <string name="coust">coust</string>
    <string name="serial_number">serial number</string>
    <string name="subject">subject</string>
    <string name="titlewithkotation">title:</string>
    <string name="coustwithcotation">coust:</string>
    <string name="serial_numberwithcotation">serial number:</string>
    <string name="subjectwithcotation">subject:</string>
    <string name="add">add</string>
    <string name="remove">Remove</string>
    <string name="payments">payments:</string>
    <string name="payment">payment</string>
    <string name="invoice_issue_date">Invoice issue date:</string>
    <string name="invoice_value">invoice value:</string>

    <string name="customer">Customer</string>
    <string name="last_name">Last name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="activate_state">activate state:</string>
    <string name="speed_adsl">speed ADSL:</string>
    <string name="first_name">First name:</string>
    <string name="second_name">Second name:</string>
    <string name="user_name">User name :</string>
    <string name="password">password:</string>
    <string name="activae_state">activae state:</string>
    <string name="account_point_value">account point value</string>
    <string name="night_speed">night speed:</string>

    <string name="textview" />
    <string name="menu_Admin_Home">Admin</string>


    <string name="my_service">My service</string>

    <string name="about_msm">about MSM</string>
    <string name="how_we_are">How we are:</string>
    <string name="scoring">Scoring:</string>
    <string name="providing_stable_and_effective_internet_connection_services_and_securing_suitable_internet_solutions_for_individuals">Providing stable and effective Internet connection services and securing suitable Internet solutions for individuals</string>
    <string name="we_strive_to_be_best_of_the_best">We strive to be best of the best</string>
    <string name="three_students_from_the_college_of_informatics_engineering_are_striving_for_excellence_and_are_in_favor_of_the_fourth_year_under_the_name_of_a_company_msm">Three students from the College of Informatics Engineering are striving for excellence and are in favor of the fourth year under the name of a company MSM</string>
    <string name="each_of_us_in_msm_the_muscat_securities_market_believes_that_the_success_of_the_company_s_core_objectives_and_tasks_paves_the_way_to_reach_the_path_of_success_by_working_in_a_team_spirit_together_to_overcome_challenges_and_search_for_new_ideas_and_solutions_to_any_problem_or_obstacle_in_addition_to_that_focusing_on_customer_service_estimating_their_needs_and_desires_and_working_to_meet_them_the_provider_msm_provides_a_landline_internet_connection">Each of us in MSM the Muscat Securities Market believes that the success of the company\'s core objectives and tasks paves the way to reach the path of success by working in a team spirit together to overcome challenges and search for new ideas and solutions to any problem or obstacle, in addition to that. Focusing on customer service, estimating their needs and desires, and working to meet them. The provider MSM provides a landline internet connection</string>
    <string name="our_vision">our vision:</string>
    <string name="rate_us">Rate us:</string>
    <string name="add_center">Add center</string>
    <string name="add_new_center">add new center</string>
    <string name="location">location:</string>
    <string name="centers_requests">Centers requests</string>
    <string name="change_speed_requests">Change speed requests</string>
    <string name="centers">Centers</string>
    <string name="recharge_the_package">Recharge The Package</string>
    <string name="welcome">Welcome</string>
    <string name="the_value_of_the_bill">the value of the bill :</string>
    <string name="bill_payment_cash">bill payment cash:</string>
    <string name="_55555">55555</string>
    <string name="NULL">NULL</string>
    <string name="_00000">00000</string>
    <string name="text_ad">text_ad</string>
    <string name="title_ad">title_ad</string>
    <string name="serial_number_for_ad">serial number for AD</string>
    <string name="id">ID :</string>
    <string name="add_to_my_services">Add to my services</string>
    <string name="cost">Cost :</string>
    <string name="titlewiithcol">Title:</string>
    <string name="to">To:</string>
    <string name="type">Type:</string>
    <string name="email">Email:</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>
    <string name="form">Form:</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="please_choose_the_new_speed_and_then_press_confirm_and_your_request_will_be_reviewed_as_soon_as_possible">Please choose the new speed and then press Confirm and your request will be reviewed as soon as possible</string>
    <string name="user_name_in_system">User name in system</string>
    <string name="edit_profile">Edit profile</string>
    <string name="active_deactivate_the_account">(Active / Deactivate) the account</string>
    <string name="pay_bill_cash">Pay bill cash</string>
    <string name="search_on_the_account">Search on the account</string>
    <string name="deactivate_a_service">Deactivate a service</string>
    <string name="size">ٍSize</string>
    <string name="extension">extension</string>
    <string name="price">price</string>


</resources>