<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/et_shape"
    android:padding="8dp"
    android:layout_margin="8dp"
    style="@style/CardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/C_C_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_name"
            style="@style/CardView"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:gravity="start"/>

        <TextView
            android:id="@+id/C_C_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_name"
            style="@style/CardView"

            android:layout_margin="8dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:gravity="start"/>
    </LinearLayout>

    <TextView
        android:id="@+id/C_C_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        style="@style/CardView"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:gravity="start"/>

    <TextView
        android:id="@+id/C_C_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        style="@style/CardView"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/C_C_activate_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activate_state"
            style="@style/CardView"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:gravity="start"/>

        <TextView
            android:id="@+id/C_C_speed_adsl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speed_adsl"
            style="@style/CardView"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:gravity="start"/>
    </LinearLayout>
</LinearLayout>