<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/C_S_linearlayout"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_margin="8dp"
    style="@style/CardView"
    android:background="@drawable/et_shape">


        <TextView
            android:id="@+id/C_S_title"
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/titlewiithcol"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/C_S_coust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/CardView"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/coustwithcotation"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/C_S_serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:gravity="start"
            android:text="@string/serial_numberwithcotation"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/C_S_subject"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/CardView"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/subjectwithcotation"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/C_S_delete_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:gravity="start"
            style="@style/CardView"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textStyle="bold"
            tools:srcCompat="@drawable/ic_baseline_delete_forever_24" />


    </LinearLayout>

