<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.UI_Admin.Revenues.Revenues_Fragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/r_f_imageview"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:padding="40dp"
        android:paddingTop="2dp"
        android:src="@drawable/revenue_big_ic"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/r_f_number_of_customer_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="8dp"
        android:background="@drawable/et_shape"
        android:text="@string/number_of_customer"
        style="@style/CardView"/>

    <TextView
        android:id="@+id/r_f_Monthly_revenue_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="8dp"
        android:background="@drawable/et_shape"
        android:text="@string/monthly_revenue"
        style="@style/CardView"/>
</LinearLayout>

</FrameLayout>